implemented HATEOAS at Payment